--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
 
+
+    <input type = "number" id = "item_price">
+    <button id = "set_price" onclick = "setPrice()">Set price</button>
     <!-- Input for customer cash -->
     <label for="cash">Cash Given: </label>
     <input type="number" id="cash" placeholder="Enter cash amount">
